# goku

./: README.md
cpp/app/infer_core/: 1CMakeLists.txt  CMakeLists.txt  caffe_locally.sh  novu_locally.sh  resnet50.ff  run_caffe_infer.sh  run_novu_infer.sh  run_trt_infer.sh
cpp/app/infer_core/src/: main.cpp
cpp/common/: buffer.h  channel.h  classifier.cpp  classifier.h  common.pb.h  concurrent.h  cuda_util.h  decode.h  file_util.h  handler.cpp  handler.h  math_util.h  novu_nnet.h  opencv_util.h  pipeline.cpp  pipeline.h  storage.pb.h  time.h  worker.grpc.pb.h  worker.pb.h  yolo_detector.cpp  yolo_detector.h
cpp/common/tensorrt/: common.h  convert.h
demo/: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json  run_docker.sh
demo/components/: Statics.vue  TaskInfo.vue  TaskList.vue  TaskMap.vue  TaskTable.vue
demo/config/: db.config.js  inference.config.js  kafka.config.js
demo/layouts/: default.vue
demo/pages/: index.vue
demo/pages/classify/: index.vue
demo/pages/data/: index.vue
demo/pages/live/: index.vue
demo/plugins/: iview.js
demo/server/: index.js
demo/server/api/: index.js  task.js
demo/service/: kafka_producer.js  mysql.js  worker.js
demo/store/: index.js
demo/utils/: test.js  time.js
doc/: 视频分析平台.docx
go/: .gitignore
go/api/: apiserver.go  main.go  run_docker.sh  run_locally.sh
go/common/db/: mysql.go  mysql.sh  mysql.sql
go/common/db/example/: main.go  run_docker.sh  run_locally.sh
go/common/id/: id.go
go/common/kafka/: consumer.go  producer.go
go/common/kafka/example/: example.go  run_docker.sh  run_locally.sh
go/init_demo/: config.go  main.go  run_docker.sh  run_locally.sh  task.conf
go/workers_demo/: main.go  run_docker.sh  run_locally.sh  worker_manager.go
proto/: .gitignore  api.proto  common.proto  generate_cpp.sh  generate_go.sh  msg.proto  storage.proto.bk  worker.proto  worker.proto.bk
proto/go_gen/: storage.pb.go
proto/go_gen/bk/: helloworld.pb.go
proto/novumind/goku/proto/: storage.proto
test/: README.md  util.py
web/: README.md  index.html  package-lock.json  package.json  run_docker.sh  upload_dist.sh  upload_locally.sh
web/config/: index.js
web/src/: App.vue  main.js
web/src/api/: model.js  task.js
web/src/components/: Chart.vue  InfoCard.vue  InfoCardText.vue  Pagination.vue
web/src/router/: index.js  router.js
web/src/store/: getters.js  index.js
web/src/store/modules/: permission.js  user.js
web/src/styles/: index.less  video.css
web/src/utils/: auth.js  fetch.js  filter.js  index.js  validate.js
web/src/views/dashboard/: index.vue
web/src/views/error-page/: 404.less  404.vue
web/src/views/layout/: LevelBar.vue  Main.vue  NavBar.vue  NavBarItem.vue
web/src/views/model/: index.vue
web/src/views/task/: index.vue
